# eigenmath-for-embeded

./: CMakeLists.txt  README.md  defs.h  display.cpp  math  stdafx.h
