cmake_minimum_required(VERSION 3.22.3)
project(eigenmath)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
add_executable(eigenmath
        abs.cpp
        add.cpp
        adj.cpp
        alloc.cpp
        append.cpp
        arccos.cpp
        arccosh.cpp
        arcsin.cpp
        arcsinh.cpp
        arctan.cpp
        arctanh.cpp
        arg.cpp
        atomize.cpp
        bake.cpp
        besselj.cpp
        bessely.cpp
        bignum.cpp
        binomial.cpp
        ceiling.cpp
        choose.cpp
        circexp.cpp
        clear.cpp
        clock.cpp
        coeff.cpp
        cofactor.cpp
        condense.cpp
        conj.cpp
        cons.cpp
        contract.cpp
        cos.cpp
        cosh.cpp
        data.cpp
        decomp.cpp
        define.cpp
        defint.cpp
        defs.h
        degree.cpp
        denominator.cpp
        derivative.cpp
        det.cpp
        dirac.cpp
        display.cpp
        distill.cpp
        divisors.cpp
        dpow.cpp
        dsolve.cpp
        eigen.cpp
        erf.cpp
        erfc.cpp
        eval.cpp
        expand.cpp
        expcos.cpp
        expsin.cpp
        factor.cpp
        factorial.cpp
        factorpoly.cpp
        factors.cpp
        filter.cpp
        find.cpp
        float.cpp
        floor.cpp
        for.cpp
        gamma.cpp
        gcd.cpp
        guess.cpp
        help.h
        hermite.cpp
        hilbert.cpp

        imag.cpp
        index.cpp
        init.cpp
        inner.cpp
        integral.cpp
        inv.cpp
        is.cpp
        isprime.cpp
        itab.cpp
        itest.cpp
        laguerre.cpp
        laplace.cpp
        lcm.cpp
        leading.cpp
        legendre.cpp
        list.cpp
        log.cpp
        madd.cpp
        mag.cpp
        main.cpp
        mcmp.cpp
        mfactor.cpp
        mgcd.cpp
        mini-test.cpp
        misc.cpp
        mmodpow.cpp
        mmul.cpp
        mod.cpp
        mpow.cpp
        mprime.cpp
        mroot.cpp
        mscan.cpp
        msqrt.cpp
        mstr.cpp
        multiply.cpp
        nroots.cpp
        numerator.cpp
        outer.cpp
        partition.cpp
        polar.cpp
        pollard.cpp
        power.cpp
        prime.cpp
        primetab.cpp
        print.cpp
        product.cpp
        prototypes.h
        qadd.cpp
        qdiv.cpp
        qmul.cpp
        qpow.cpp
        qsub.cpp
        quickfactor.cpp
        quotient.cpp
        rationalize.cpp
        real.cpp
        rect.cpp
        rewrite.cpp
        roots.cpp
        run.cpp
        scan.cpp
        selftest.cpp
        selftest.h
        sgn.cpp
        simfac.cpp
        simplify.cpp
        sin.cpp
        sinh.cpp
        stack.cpp
        stdafx.h
        subst.cpp
        sum.cpp
        symbol.cpp
        tan.cpp
        tanh.cpp
        taylor.cpp
        tensor.cpp
        test.cpp
        transform.cpp
        transpose.cpp
        userfunc.cpp
        variables.cpp
        vectorize.cpp
        zero.cpp)
